--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,95 +4,181 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/circles"
+    android:background="@drawable/dashboard_background"
     tools:context=".DashboardActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/top_background">
-
-
-        <ImageView
-            android:id="@+id/profile"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:src="@drawable/circles" />
-
-    </LinearLayout>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="200dp"
-        android:layout_marginTop="75dp"
-        android:src="@drawable/icon_account_circle"/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:backgroundTint="@android:color/transparent"
-        android:layout_marginTop="50dp"
-        android:textColor="@color/white"
-        android:text="Welcome"
-        android:fontFamily="@font/monsterrat"
-        android:textStyle="bold"
-        android:textSize="38dp" />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:backgroundTint="@android:color/transparent"
-        android:layout_marginTop="100dp"
-        android:textColor="@color/white"
-        android:text="User"
-        android:fontFamily="@font/monsterrat"
-        android:textStyle="bold"
-        android:textSize="38dp" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:gravity="center"
+        android:layout_height="200dp"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:background="@drawable/card">
 
-        <EditText
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="310dp"
-            android:background="@drawable/card"
-            android:fontFamily="@font/monsterrat"
-            android:padding="50dp"
-            android:text="Finance"
-            android:textColor="@color/white"
-            android:textSize="38dp"
-            android:textStyle="bold" />
+            android:layout_marginTop="35dp"
+            android:orientation="horizontal"
+            android:layout_gravity="center">
 
+            <TextView
+                android:id="@+id/welcome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/monsterrat"
+                android:layout_marginRight="140dp"
+                android:layout_marginBottom="20dp"
+                android:text="Welcome"
+                android:textColor="@color/white"
+                android:textSize="34sp"
+                android:textStyle="bold" />
 
+            <ImageView
+                android:id="@+id/btnlogout"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="7dp"
+                android:src="@drawable/logouticon" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="6dp"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="14dp"
+                android:fontFamily="@font/monsterrat"
+                android:text="Success in finance requires both prudent allocation of resources and meticulous adherence to a well-structured schedule."
+                android:textColor="#FFFFFF"
+                android:textSize="15sp" />
+        </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
         android:orientation="vertical"
-        android:layout_marginTop="460dp"
-        android:padding="16dp">
+        android:layout_marginTop="200dp">
 
-        <EditText
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/card"
-            android:fontFamily="@font/monsterrat"
-            android:padding="50dp"
-            android:text="Calendar"
-            android:textColor="@color/white"
-            android:textSize="38dp"
-            android:textStyle="bold" />
+            android:layout_marginTop="80dp"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/btnFinance"
+                android:layout_width="350dp"
+                android:layout_height="150dp"
+                android:layout_gravity="center"
+                android:background="@drawable/card2"
+                android:orientation="horizontal"
+                android:padding="3dp">
+
+                <LinearLayout
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="20dp"
+                        android:fontFamily="@font/monsterrat"
+                        android:text="Finance"
+                        android:textColor="@color/white"
+                        android:textSize="24sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:fontFamily="@font/monsterrat"
+                        android:text="Track your income and expenditure"
+                        android:textColor="@color/white"
+                        android:textSize="15sp" />
+
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="30dp"
+                    android:padding="15dp"
+                    android:src="@drawable/stock" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/btnSchedule"
+                android:layout_width="350dp"
+                android:layout_height="150dp"
+                android:layout_gravity="center"
+                android:background="@drawable/card2"
+                android:orientation="horizontal"
+                android:padding="3dp">
+
+                <LinearLayout
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="20dp"
+                        android:fontFamily="@font/monsterrat"
+                        android:text="Schedule"
+                        android:textColor="@color/white"
+                        android:textSize="24sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:fontFamily="@font/monsterrat"
+                        android:text="Set task,deadlines and events"
+                        android:textColor="@color/white"
+                        android:textSize="15sp" />
+
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="30dp"
+                    android:padding="15dp"
+                    android:src="@drawable/calendar" />
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
+
+
+
+
+
+
+
