--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -22,7 +22,7 @@
             android:backgroundTint="@android:color/transparent"
             android:fontFamily="@font/monsterrat"
             android:paddingLeft="10sp"
-            android:text="Create Your Account"
+            android:text="Forgot Password"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="32dp"
@@ -46,39 +46,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_corner"
-            android:hint="Enter Email"
+            android:hint="Enter Email for Existing Account"
             android:inputType="text"
             android:padding="18dp"
             android:textColor="@color/white"
             android:textColorHint="#979797"
             android:textSize="15sp" />
 
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@android:color/transparent"
-            android:fontFamily="@font/monsterrat"
-            android:paddingLeft="10sp"
-            android:paddingTop="15sp"
-            android:paddingBottom="10sp"
-            android:text="Password"
-            android:textColor="@color/white" />
-
-        <EditText
-            android:id="@+id/password_for_signup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rounded_corner"
-            android:hint="Enter Password"
-            android:inputType="text"
-            android:padding="18dp"
-            android:textColor="@color/white"
-            android:textColorHint="#979797"
-            android:textSize="15sp" />
 
         <Button
-            android:id="@+id/btnsignup"
+            android:id="@+id/btnResetPass"
             android:layout_width="200dp"
             android:layout_height="65dp"
             android:layout_marginTop="22dp"
@@ -86,7 +63,7 @@
             android:backgroundTint="@color/white"
             android:fontFamily="@font/monsterrat"
             android:padding="18dp"
-            android:text="Create Account"
+            android:text="Reset Password"
             android:textColor="#4E3291"
             android:textSize="15sp"
             android:textStyle="bold" />
