--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="UselessParent">
 
         <TextView
             android:layout_width="250dp"
@@ -23,9 +23,10 @@
             android:gravity="center"
             android:text="THRIFTYSKED"
             android:textStyle="bold"
-            android:textSize="30dp"
+            android:textSize="30sp"
             android:layout_marginBottom="50dp"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            tools:ignore="HardcodedText" />
 
         <EditText
             android:id="@+id/email_input"
@@ -38,7 +39,8 @@
             android:padding="18dp"
             android:textColor="@color/white"
             android:textColorHint="#979797"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            tools:ignore="Autofill,HardcodedText,TextFields" />
 
         <EditText
             android:id="@+id/password_input"
@@ -52,7 +54,8 @@
             android:padding="18dp"
             android:textColor="@color/white"
             android:textColorHint="#979797"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            tools:ignore="Autofill,HardcodedText" />
 
         <Button
             android:id="@+id/login_btn"
@@ -61,58 +64,28 @@
             android:layout_marginTop="32dp"
             android:backgroundTint="@color/white"
             android:fontFamily="@font/monsterrat"
-
             android:padding="18dp"
             android:text="Login"
             android:textColor="#4E3291"
             android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/btnForgotPass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/monsterrat"
             android:gravity="center"
             android:text="Forgot Password?"
-            android:textColor="#914FDA" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:fontFamily="@font/monsterrat"
-            android:text="Social Connect"
-            android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:textColor="#914FDA"
+            tools:ignore="HardcodedText" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/google_btn"
-                android:layout_width="44dp"
-                android:layout_height="44dp"
-                android:layout_margin="16dp"
-                android:src="@drawable/google" />
-
-
-            <ImageView
-                android:id="@+id/facebook_btn"
-                android:layout_width="44dp"
-                android:layout_height="44dp"
-                android:layout_margin="16dp"
-                android:src="@drawable/facebook" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="40dp"
             android:gravity="center">
 
             <TextView
@@ -122,7 +95,8 @@
                 android:layout_weight="0"
                 android:fontFamily="@font/monsterrat"
                 android:text="Don't have an account?"
-                android:textColor="#656565" />
+                android:textColor="#656565"
+                tools:ignore="HardcodedText" />
 
             <TextView
                 android:id="@+id/gotosignupscreen"
@@ -132,7 +106,8 @@
                 android:fontFamily="@font/monsterrat"
                 android:text=" Sign Up"
                 android:textColor="#714B9E"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:ignore="HardcodedText" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
