--- a/app/src/main/res/layout/fragment_analytics.xml
+++ b/app/src/main/res/layout/fragment_analytics.xml
@@ -89,6 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/monsterrat"
             android:gravity="center"
             android:text="Feb 27,2024"
             android:textColor="@color/white"
@@ -107,22 +108,23 @@
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/card3"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/card3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:tabIndicatorColor="@color/white"
+        app:tabIndicatorColor="@color/lightpurple"
         app:tabMode="fixed"
         app:tabTextColor="@color/white">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Daily" />
+            android:text="Daily"
+            tools:layout_editor_absoluteX="10dp"
+            tools:layout_editor_absoluteY="63dp" />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
