--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,8 @@
     <color name="darkpurple">#6C20C3</color>
     <color name="darkestpurple">#280055</color>
 
-
+    <color name="lightgrey">#888888</color>
+    <color name="blue">#0064FF</color>
 
     <color name="category1">#4CAF50</color>
     <color name="category2">#F44336</color>
