--- a/app/src/main/res/layout/each_task.xml
+++ b/app/src/main/res/layout/each_task.xml
@@ -17,15 +17,19 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:background="@drawable/card5"
             android:layout_width="match_parent"
+            android:padding="8dp"
             android:layout_height="match_parent"
+
             >
 
             <com.google.android.material.checkbox.MaterialCheckBox
                 android:id="@+id/mCheckBoxTick"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:buttonTint="@color/darkestpurple"
+                android:buttonTint="@color/white"
+                android:textColor="@color/white"
                 android:paddingStart="10dp"
                 android:text="This is task 1"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -38,6 +42,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="40dp"
+                android:alpha="0.7"
+                android:textColor="@color/white"
                 android:text="31-3-2020"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
